--- a/App.config
+++ b/App.config
@@ -11,4 +11,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="url" value="https://eclass.aueb.gr/"/>
+    <add key="all-courses" value="https://eclass.aueb.gr/main/my_courses.php"/>
+    <add key="xpath" value="/html/body/div[2]/div[1]/div[3]/div/div/div[4]/table/tbody/tr/td[1]/strong"/>
+    <add key="download" value="https://eclass.aueb.gr/modules/document/index.php?course={0}&amp;download=/"/>
+  </appSettings>
 </configuration>
