-added overwrite functionallity -added pop-up message on complete -added app.config

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+bin/Debug/data.json
+bin/Release/data.json
